# lsr-rust

./: Cargo.toml  README.md
src/: get_icon.rs  main.rs
