[package]
name = "lsr-nf"
version = "0.1.3"
authors = ["Joseph Chacko <josephchacko2006@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "The ls -R command with Nerd Fonts icons and indentation"
readme = "README.md"
homepage = "https://github.com/mavenried"
repository = "https://github.com/mavenried/lsr-rust"
keywords = ["cli", "ls", "nerd-fonts", "icons"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
colored = "2.1.0"
termsize = "0.1.8"
